--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -4,17 +4,25 @@
     <head>
         <meta charset="utf-8">
         <style>
+            html {
+                height: 98.8%;
+            }
+
+            body {
+                height: 100%;
+            }
+
             table {
                 border-collapse: collapse;
                 border: 1px solid black;
-                width: 1000px;
+                width: 100%;
+                height: 100%;
             }
             
             td {
                 border-collapse: collapse;
                 border: 1px solid black;
-                padding: 30px; 
-                table-layout: fixed;     
+                text-align: center;
             }
 
             .txt {
