Mercredi 27 avril 2022 - push 3 -

--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>menu SNCF</title>
         <link href="menu.css" rel="stylesheet">
     </head>
     <body>
