Vendredi 29 avril 2022 - push 4 -

--- a/cell03/ex00/background.html
+++ b/cell03/ex00/background.html
@@ -5,9 +5,11 @@
         <meta charset="utf-8">
         <title>background color</title>
         <link rel="stylesheet" href="background.css">
-        <script type="text/javascript" src="script.js"></script>
     </head>
-    <body>
-
+    <body id="body">
+        <div class="div-cta">
+            <button id="cta">CTA</button>
+        </div>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
