Vendredi 29 avril 2022 - push 5 -

--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -13,7 +13,7 @@
                     <div class="image"></div>
                     <div>
                         <table class="texte">
-                            <tr><td><h2>tda-silv</h2></td></tr>
+                            <tr><th>tda-silv</th></tr>
                             <tr><td><h3>Thomas Da Silva</h3></td></tr>
                             <tr><td><h4>42 Paris</h4></td></tr>
                             <tr><td><div>
@@ -24,7 +24,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="contact"><h5>CONTACT</h5></div>
+                    <button class="contact"><h5>CONTACT</h5></button>
                 </div>
         </div>
     </body>
